Update affiliate links

--- a/post_20260127_183859_How_to_Leverage_AI_Tools_for_Time_Management_in_Yo.html
+++ b/post_20260127_183859_How_to_Leverage_AI_Tools_for_Time_Management_in_Yo.html
@@ -114,6 +114,9 @@ Let’s dive into the various ways AI can enhance time management in your small 
 <p>
 <strong><a href="https://www.digistore24.com/redir/628355/slliws/" class="affiliate-link" target="_blank">🚀 Explore AI Tools That Can Save You Hours Every Day →</a></strong>
 </p>
+<p>
+<strong><a href="https://www.digistore24.com/redir/472943/slliws/" class="affiliate-link" target="_blank">🚀 Explore AI Tools That Can Save You Hours Every Day →</a></strong>
+</p>
 <h2>How to Use AI for Time Management in Business</h2>
 <h3>Automating Routine Tasks</h3>
 <p>
@@ -127,6 +130,9 @@ One of the most significant advantages of AI is its ability to automate repetiti
 </p>
 <p>
 <strong><a href="https://www.digistore24.com/redir/190051/slliws/" class="affiliate-link" target="_blank">💎 Get Access to Premium AI Solutions for Your Business →</a></strong>
+</p>
+<p>
+<strong><a href="https://ingeniuswave.com/DSvsl/#aff=slliws" class="affiliate-link" target="_blank">💎 Get Access to Premium AI Solutions for Your Business →</a></strong>
 </p>
 <h2>Smart Scheduling</h2>
 <p>
@@ -215,6 +221,9 @@ Leveraging AI tools for time management can significantly improve your small bus
 </p>
 <p>
 <strong><a href="https://ai-cash-page-system-dd.24-7-ai-cash-system.academy/#aff=slliws" class="affiliate-link" target="_blank">⚡ Start Using These AI Tools Today - Special Offer Inside →</a></strong>
+</p>
+<p>
+<strong><a href="https://www.digistore24.com/redir/538695/tahni88/" class="affiliate-link" target="_blank">⚡ Start Using These AI Tools Today - Special Offer Inside →</a></strong>
 </p>
 <h2>Call to Action</h2>
 <p>
