--- a/post_20260127_184039_10_Best_AI-Powered_Tools_to_Boost_Productivity_for.html
+++ b/post_20260127_184039_10_Best_AI-Powered_Tools_to_Boost_Productivity_for.html
@@ -108,6 +108,9 @@ Let’s dive into the top AI-powered tools that can help you maximize your produ
 <p>
 <strong><a href="https://www.digistore24.com/redir/628355/slliws/" class="affiliate-link" target="_blank">🚀 Explore AI Tools That Can Save You Hours Every Day →</a></strong>
 </p>
+<p>
+<strong><a href="https://www.digistore24.com/redir/472943/slliws/" class="affiliate-link" target="_blank">🚀 Explore AI Tools That Can Save You Hours Every Day →</a></strong>
+</p>
 <h2>What It Is</h2>
 <p>
 Trello is a popular project management tool, but when integrated with Butler, its AI-powered automation tool, it becomes an even more powerful resource for small business owners.
@@ -121,6 +124,9 @@ Butler allows you to automate tasks within Trello, such as moving cards, assigni
 </p>
 <p>
 <strong><a href="https://www.digistore24.com/redir/190051/slliws/" class="affiliate-link" target="_blank">💎 Get Access to Premium AI Solutions for Your Business →</a></strong>
+</p>
+<p>
+<strong><a href="https://ingeniuswave.com/DSvsl/#aff=slliws" class="affiliate-link" target="_blank">💎 Get Access to Premium AI Solutions for Your Business →</a></strong>
 </p>
 <h2>Use Case</h2>
 <p>
@@ -270,6 +276,9 @@ By leveraging these affordable AI tools for enhancing productivity, you can focu
 </p>
 <p>
 <strong><a href="https://ai-cash-page-system-dd.24-7-ai-cash-system.academy/#aff=slliws" class="affiliate-link" target="_blank">⚡ Start Using These AI Tools Today - Special Offer Inside →</a></strong>
+</p>
+<p>
+<strong><a href="https://www.digistore24.com/redir/538695/tahni88/" class="affiliate-link" target="_blank">⚡ Start Using These AI Tools Today - Special Offer Inside →</a></strong>
 </p>
 <h2>Call to Action</h2>
 <p>
