--- a/post_20260127_185157_Top_5_AI_Tools_for_Content_Creation_and_Marketing_.html
+++ b/post_20260127_185157_Top_5_AI_Tools_for_Content_Creation_and_Marketing_.html
@@ -114,6 +114,9 @@ Now that we understand the benefits, let’s look at the <strong>top AI tools fo
 <p>
 <strong><a href="https://www.digistore24.com/redir/628355/slliws/" class="affiliate-link" target="_blank">🚀 Explore AI Tools That Can Save You Hours Every Day →</a></strong>
 </p>
+<p>
+<strong><a href="https://www.digistore24.com/redir/472943/slliws/" class="affiliate-link" target="_blank">🚀 Explore AI Tools That Can Save You Hours Every Day →</a></strong>
+</p>
 <h2>What is Jasper?</h2>
 <p>
 Jasper is an AI-powered writing assistant designed to help businesses create high-quality content quickly. With its intuitive interface, Jasper can generate everything from blog posts to social media captions in a matter of minutes.
@@ -129,6 +132,9 @@ Jasper is an AI-powered writing assistant designed to help businesses create hig
 </p>
 <p>
 <strong><a href="https://www.digistore24.com/redir/190051/slliws/" class="affiliate-link" target="_blank">💎 Get Access to Premium AI Solutions for Your Business →</a></strong>
+</p>
+<p>
+<strong><a href="https://ingeniuswave.com/DSvsl/#aff=slliws" class="affiliate-link" target="_blank">💎 Get Access to Premium AI Solutions for Your Business →</a></strong>
 </p>
 <h2>Practical Example</h2>
 <p>
@@ -227,6 +233,9 @@ By leveraging these <strong>affordable AI marketing tools for startups</strong>,
 </p>
 <p>
 <strong><a href="https://ai-cash-page-system-dd.24-7-ai-cash-system.academy/#aff=slliws" class="affiliate-link" target="_blank">⚡ Start Using These AI Tools Today - Special Offer Inside →</a></strong>
+</p>
+<p>
+<strong><a href="https://www.digistore24.com/redir/538695/tahni88/" class="affiliate-link" target="_blank">⚡ Start Using These AI Tools Today - Special Offer Inside →</a></strong>
 </p>
 <h2>Call to Action</h2>
 <p>
